--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,8 @@
   <groupId>edu.poniperro</groupId>
   <artifactId>galleygrub</artifactId>
   <version>1.0-SNAPSHOT</version>
-
   <name>galleygrub</name>
-  <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <url>https://github.com/dfleta/galley-grub</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
